--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="css/test2.css" type="text/css">
 </head>
 <body>
-    <div class="card">
-        我是一个卡片，这是我的内容。
-    </div>
+<div class="grid-box">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+</div>
 </body>
 </html>
