--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="css/test2.css" type="text/css">
 </head>
 <body>
-<div class="grid-box">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
+<div class="main-window">
+    <div class="header">header</div>
+    <div class="content">
+        <div class="aside">Aside</div>
+        <div class="main">
+            <div class="main-header">main</div>
+            <div class="footer">footer</div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
